(lang dune 3.17)

(name advent_of_code_2024)

(generate_opam_files true)

(source
 (github sidneypiper/advent_of_code_2024))

(authors "Sidney Piper <hello@saltyyy.dev>")

(maintainers "Sidney Piper <hello@saltyyy.dev>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name advent_of_code_2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
